tests/errors/string_58/STRI2INT1.src

.IPPcode21

DEFVAR GF@int

STRI2int GF@int string@ahoj int@-1
